--- a/src/main/resources/templates/employee-edit.html
+++ b/src/main/resources/templates/employee-edit.html
@@ -1,37 +1,45 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-   <head>
-      <title th:utext="${title}"></title>
-      <style>
-         th, td {
-         padding: 5px;
-         }
-         td span  {
-         font-size:90%;
-         font-style: italic;
-         color: red;
-         }
-         .error {
-         color: red;
-         font-style: italic;
-         }
-      </style>
-   </head>
-   <body>
-      <!-- Include _menu.html -->
-      <th:block th:include="_menu"></th:block>
-       
-      <h2>Assign roles to Employee</h2>
-       
-      <div th:if="${errorMessage != null}"
-           th:utext="${errorMessage}" class="error">...</div>
-       
-      <form th:action="@{'/employee/'+${employee.getEmpId()}+'/save'}" th:object="${rolesForm}" method="POST">
-         <div th:each="role: ${roles}">
-            <input type="checkbox" th:value="${role.getRoleId()}" th:utext="${role}" th:field="*{roles}" />
-         </div>
-         <div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">..</div>
-         <input type="submit" value="Submit" />
-      </form>
-   </body>
+<!doctype html>
+<html lang="en">
+<th:block th:include="head"></th:block>
+<body>
+    <th:block th:include="header"></th:block>
+
+    <section class="blog_area section_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mb-5 mb-lg-0">
+                  <h2>Assign roles to Employee</h2>
+                  <br/>
+                  <div th:if="${errorMessage != null}"
+                       th:utext="${errorMessage}" class="error">...</div>
+                   
+                  <form th:action="@{'/employee/'+${employee.getEmpId()}+'/save'}" th:object="${empForm}" method="POST">
+                     <div class="form-group" th:each="role: ${roles}">
+                        <input 
+                           type="checkbox" 
+                           th:value="${role.getRoleId()}" 
+                           th:field="*{roles}"
+                           th:checked="${empForm.getRoles().contains(role.getRoleId())}"
+                        />
+                        <label class="role" th:text="${role}" />
+                     </div>
+                     <div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">..</div>
+                     <input class="button button-contactForm btn_1" type="submit" value="Submit" />
+                  </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <th:block th:include="footer"></th:block>
+    <script>
+        window.addEventListener('load', function(){
+            document.querySelectorAll(".role").forEach(role => {
+                role.innerHTML = role.innerHTML.split("_").join(" ");
+            })
+        });
+    </script>
+    
+</body>
+
 </html>
