--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -28,7 +28,7 @@
               </div>
               <div class="col-12">
                 <div class="form-group">
-                  <input class="form-control" th:field="*{name}" type="name" placeholder="Name">
+                  <input class="form-control" th:field="*{name}" type="text" placeholder="Name">
                   <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">..</span>
                 </div>
               </div>
