--- a/src/main/resources/templates/successful.html
+++ b/src/main/resources/templates/successful.html
@@ -8,15 +8,9 @@
       <div class="container">
          <div class="row">
             <div class="col-lg-8 mb-5 mb-lg-0">
-            <h2>User Info Page</h2>
-            <h3>Welcome <span th:utext="${profile.name}" /></h3>
-            <br/>
-            Username: <span th:utext="${profile.userName}"/>
-            <br/>
-            Gender: <span th:utext="${profile.gender}"/>
-            <br/>
-            Address: <span th:utext="${profile.address}"/>
-            </br/>
+               <h3>
+                  Completed Successfully
+               </h3>
             </div>
          </div>
       </div>
