Teacher, Student Employee inherited from User

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,14 +2,14 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:800|Poppins:300,400,500,600,700,800|Roboto:300,400,500");
 /* line 2, E:/172 Etrain Education/172_Etrain_Education_html/sass/_extends.scss */
 .btn_1, .btn_2:hover, .main_menu .navbar-toggler:after, .banner_part .banner_text .btn_1, .feature_part .single_feature:hover span {
-  background-image: linear-gradient(to left, #64ee41 25%, #5d9c15 100%);
+  background-image: linear-gradient(to left, #41b7ee 25%, #6ecaf5 100%);
 }
 
 /* line 6, E:/172 Etrain Education/172_Etrain_Education_html/sass/_extends.scss */
 .member_counter {
-  background-image: -moz-linear-gradient(0deg, #5d9c15 0%, #64ee41 100%);
-  background-image: -webkit-linear-gradient(0deg, #5d9c15 0%, #64ee41 100%);
-  background-image: -ms-linear-gradient(0deg, #5d9c15 0%, #64ee41 100%);
+  background-image: -moz-linear-gradient(0deg, #15399c 0%, #41b7ee 100%);
+  background-image: -webkit-linear-gradient(0deg, #15399c 0%, #41b7ee 100%);
+  background-image: -ms-linear-gradient(0deg, #15399c 0%, #41b7ee 100%);
 }
 
 /**************** extend css start ****************/
@@ -529,14 +529,14 @@ ul {
   text-transform: capitalize;
   background-size: 200% auto;
   border: 1px solid transparent;
-  box-shadow: 0px 12px 20px 0px #64ee4108;
+  box-shadow: 0px 12px 20px 0px #41b7ee08;
 }
 
 /* line 38, E:/172 Etrain Education/172_Etrain_Education_html/sass/_button.scss */
 .btn_1:hover {
   color: #fff !important;
   background-position: right center;
-  box-shadow: 0px 10px 30px 0px #64ee4108;
+  box-shadow: 0px 10px 30px 0px #41b7ee08;
 }
 
 @media (max-width: 576px) {
@@ -2646,7 +2646,7 @@ ul {
 
 /* line 112, E:/172 Etrain Education/172_Etrain_Education_html/sass/_banner.scss */
 .banner_part .banner_text .btn_1 {
-  box-shadow: 0px 12px 20px 0px #64ee4108;
+  box-shadow: 0px 12px 20px 0px #41b7ee08;
   margin-top: 50px;
   padding: 13.5px 45px;
 }
