--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,22 +1,27 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-   <head>
-      <title th:utext="${title}"></title>
-   </head>
-   <body>
-      <!-- Include _menu.html -->
-      <th:block th:include="_menu"></th:block>
-       
-      <h2>Admin Page</h2>
-      <h3>Welcome :
-         <span th:utext="${#request.userPrincipal.name}"></span>
-      </h3>
-      <b>This is protected page!</b>  
-       
-      <br/><br/>
-       
-      <div th:if="${userInfo != null}" th:utext="${userInfo}"></div>
-       
-   </body>
+<!doctype html>
+<html lang="en">
+<th:block th:include="head"></th:block>
+<body>
+    <th:block th:include="header"></th:block>
+
+    <section class="blog_area section_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mb-5 mb-lg-0">
+                     <h2>Admin Page</h2>
+                     <h3>Welcome :
+                        <span th:utext="${#request.userPrincipal.name}"></span>
+                     </h3>
+                     <b>This is protected page!</b>  
+                      
+                     <br/><br/>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <th:block th:include="footer"></th:block>
     
+</body>
+
 </html>
