--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -2,7 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <title th:utext="${title}"></title>
+    <title th:text="${title}"></title>
     <link rel="icon" href="/img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -17,6 +17,8 @@
     <!-- flaticon CSS -->
     <link rel="stylesheet" href="/css/flaticon.css">
     <!-- font awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <!-- ? -->
     <link rel="stylesheet" href="/css/magnific-popup.css">
     <!-- swiper CSS -->
     <link rel="stylesheet" href="/css/slick.css">
