--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,18 @@
 <body>
   <th:block th:include="header"></th:block>
 
+  <style>
+    .employee-section, #student-section, .teacher-section{
+      display: none;
+    }
+    .error{
+      color:#dc3545;
+      margin: 10px 5px;
+    }
+    h4{
+      margin-bottom: 15px;
+    }
+  </style>
   <!-- ================ contact section start ================= -->
   <section class="contact-section section_padding">
     <div class="container">
@@ -12,53 +24,117 @@
           <h2 class="contact-title">New User</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" th:action="@{/register}" th:object="${userForm}" method="POST">
+          <form id="userForm" class="form-contact contact_form" th:action="@{/register}" th:object="${userForm}" method="POST">
             <div class="row">
               <div class="col-6">
                 <div class="form-group">
                   <input class="form-control" th:field="*{userName}" type="text" placeholder="Username">
-                  <span th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">..</span>
+                  <div th:if="${#fields.hasErrors('userName')}" class="error" th:errors="*{userName}">..</div>
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group">
                   <input class="form-control" th:field="*{password}" type="password" placeholder="Password">
-                  <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">..</span>
+                  <div th:if="${#fields.hasErrors('password')}" class="error" th:errors="*{password}">..</div>
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-group">
                   <input class="form-control" th:field="*{name}" type="text" placeholder="Name">
-                  <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">..</span>
+                  <div th:if="${#fields.hasErrors('name')}" class="error" th:errors="*{name}">..</div>
                 </div>
               </div>
               <div class="col-6 mb-3">
                 <div class="form-group">
                   <select class="form-control" th:field="*{gender}">
-                      <option value="" data-display="Select" disabled>Select</option>
+                      <option value="" data-display="Gender">Select</option>
                       <option value="M">Male</option>
                       <option value="F">Female</option>
                    </select>
-                  <span th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">..</span>
+                   <br/>
+                  <div th:if="${#fields.hasErrors('gender')}" class="error" th:errors="*{gender}">..</div>
                 </div>
               </div>
               <div class="col-6 mb-3">
-                  <div class="form-group">
-                    <select class="form-control" th:field="*{type}">
-                        <option value="" data-display="User type">Select</option>
-                        <option
-                          th:each="userType: ${userTypes}"
-                          th:value="${userType}"
-                          th:utext="${userType.getName()}" 
-                        />
-                     </select>
-                    <span th:if="${#fields.hasErrors('type')}" th:errors="*{type}">..</span>
-                  </div>
+                <div class="form-group">
+                  <select class="form-control" th:field="*{type}">
+                      <option value="" data-display="User type">Select</option>
+                      <option
+                        th:each="userType: ${userTypes}"
+                        th:value="${userType}"
+                        th:utext="${userType.getName()}" 
+                      />
+                    </select>
+                    <br/>
+                  <div th:if="${#fields.hasErrors('type')}" class="error" th:errors="*{type}">..</div>
                 </div>
+              </div>
+              <div class="col-12 mb-3" id="student-section">
+                <div class="form-group">
+                  <h4>Enroll student to class</h4>
+                  <select class="form-control" th:field="*{level}">
+                    <option value="" data-display="Class">Select</option>
+                    <option
+                      th:each="class: ${classes}"
+                      th:value="${class.getLevel()}"
+                      th:text="${'Class '+class.getLevel()}" 
+                    />
+                  </select>
+                  <div th:if="${#fields.hasErrors('level')}" class="error" th:errors="*{level}">..</div>
+                </div>
+              </div>
+              <div class="col-12 mb-3 employee-section">
+                <div class="form-group">
+                  <h4>Employee salary</h4>
+                  <input type="text" class="form-control" th:field="*{salary}" placeholder="Enter salary" />
+                  <div th:if="${#fields.hasErrors('salary')}" class="error" th:errors="*{salary}">..</div>
+                </div>
+              </div>
+              <div class="col-6 mb-3 employee-section" id="rolelist">
+                  <h4>Assign roles to employee</h4>
+                  <div class="form-group" th:each="role: ${roles}">
+                    <input 
+                        type="checkbox" 
+                        th:value="${role.getRoleId()}" 
+                        th:field="*{roles}"
+                    />
+                    <label class="role" th:text="${role}" />
+                  </div>
+                  <div th:if="${#fields.hasErrors('roles')}" class="error" th:errors="*{roles}">..</div>
+              </div>
+              <div class="col-6 mb-3 teacher-section">
+                <div class="form-group">
+                  <h4>Assign courses to teacher</h4>
+                  <select class="form-control" id="class-filter">
+                    <option value="" data-display="Filter by class">Select</option>
+                    <option
+                      th:each="class: ${classes}"
+                      th:value="${class.getLevel()}"
+                      th:text="${'Class '+class.getLevel()}" 
+                    />
+                  </select>
+                  <br />
+                </div>
+                <div class="form-group" th:each="course: ${courses}">
+                  <input 
+                      type="checkbox" 
+                      th:value="${course.getCourseId()}" 
+                      th:field="*{courses}"
+                  />
+                  <label th:text="${course.getName()}" />
+                </div>
+                <div th:if="${#fields.hasErrors('courses')}" class="error" th:errors="*{courses}">..</div>
+              </div>
+              <div class="col-12 teacher-section">
+                  <div class="form-group">
+                    <textarea class="form-control" th:field="*{qualifications}" type="text" placeholder="Teacher Qualifications" />
+                    <div th:if="${#fields.hasErrors('qualifications')}" class="error" th:errors="*{qualifications}">..</div>
+                  </div>
+              </div>
               <div class="col-12">
                 <div class="form-group">
                   <textarea class="form-control" th:field="*{address}" placeholder="Address" />
-                  <span th:if="${#fields.hasErrors('address')}" th:errors="*{address}">..</span>
+                  <div th:if="${#fields.hasErrors('address')}" class="error" th:errors="*{address}">..</div>
                 </div>
               </div>
             </div>
@@ -68,7 +144,7 @@
             <div class="col-12" th:if="${#request.getParameter('error') == 'true'}"></div>
               <span
                 th:if="${errorMessage != null}"
-                th:utext="${errorMessage}" class="error"
+                th:text="${errorMessage}" class="error"
               />                
             </div>
           </form>
@@ -78,6 +154,33 @@
   </section>
 
   <th:block th:include="footer"></th:block>
+  
+  <script>
+    $(document).ready(function() {
+      document.querySelectorAll(".role").forEach(role => {
+        role.innerHTML = role.innerHTML.split("_").join(" ");
+      })
+
+      $("#userForm").on("change", function(){
+        if($("#type").val()=="STUDENT") $("#student-section").fadeIn();
+        else $("#student-section").fadeOut();
+
+        if($("#type").val()=="EMPLOYEE") $(".employee-section").fadeIn();
+        else $(".employee-section").fadeOut();
+
+        var checked = [];
+        $.each($("#rolelist input[type='checkbox']:checked"), function(){
+          checked.push($(this).val());
+        });
+
+        if($("#type").val()=="EMPLOYEE" && checked.includes("1"))
+            $(".teacher-section").fadeIn();
+        else $(".teacher-section").fadeOut();
+
+      });
+    })
+  </script>
+
 
 </body>
 
