--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,6 +23,9 @@
                                     class="nav-item active">
                                     <a class="nav-link" th:href="@{/profile}">Profile</a>
                                 </li>
+                                <a class="nav-link active" th:href="@{/courses}">
+                                    Courses
+                                </a>
                                 <li sec:authorize="hasAuthority('TEACHER')" 
                                     class="nav-item active">
                                     <a class="nav-link" th:href="@{/classes}">
@@ -40,15 +43,21 @@
                                     <a class="nav-link" th:href="@{/admin}">Admin</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a 
+                                        class="nav-link dropdown-toggle"
+                                        href="blog.html"
+                                        id="navbarDropdown"
+                                        role="button"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true"
+                                        aria-expanded="false"
+                                        sec:authorize="hasAnyAuthority('EMPLOYEE', 'ADMIN')"
+                                    >
                                         Manage
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a  sec:authorize="hasAuthority('USER_MANAGER')"  class="dropdown-item" th:href="@{/users}">
                                             Users
-                                        </a>
-                                        <a  sec:authorize="hasAuthority('COURSE_MANAGER')"  class="dropdown-item" th:href="@{/courses}">
-                                            Courses
                                         </a>
                                         <a  sec:authorize="hasAuthority('ACCOUNT_MANAGER')"  class="dropdown-item" th:href="@{/manage-salary}">
                                             Salary
