--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -53,7 +53,7 @@
                             <a class="btn btn-success manage_btn" 
                                 sec:authorize="hasAuthority('TEACHER')"
                                 th:if="${#request.userPrincipal.name} == ${course.getTeacher().getUserName()}"
-                                th:href="@{'/course/'+${course.getCourseId()}+'/view'}"
+                                th:href="@{'/course-page/'+${course.getCourseId()}}"
                             >
                                 Open
                             </a>
