--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,8 +26,7 @@
                                 <a class="nav-link active" th:href="@{/courses}">
                                     Courses
                                 </a>
-                                <li sec:authorize="hasAuthority('TEACHER')" 
-                                    class="nav-item active">
+                                <li class="nav-item active">
                                     <a class="nav-link" th:href="@{/classes}">
                                         Classes
                                     </a>
