--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -9,39 +9,31 @@
             <div class="col-12">
                <div class="row">
                   <div class="col-6">
-                     <h2>All users</h2>
-                  </div>
-                  <div class="col-6">
-                     <a class="btn btn-info new_btn" th:href="@{/register}">
-                        <i class="fas fa-user-plus"></i>                        
-                        Add New User
-                     </a>
+                     <h2>Students</h2>
                   </div>
                </div>
                <br/>
                <table class="table data-table">
                   <thead class="thead-dark">
                   <tr>
-                     <th scope="col">User Id</th>
-                     <th scope="col">Name</th>
+                     <th scope="col">Student Id</th>
+                     <th scope="col">Student</th>
                      <th scope="col">Gender</th>
                      <th scope="col">Address</th>
-                     <th scope="col">Type</th>
                      <th scope="col">Actions</th>           
                   </tr>
                   </thead>
-                  <tr th:each="user: ${users}">
-                     <th scope="row" th:text="${user.getUserId()}" />
-                     <td th:text="${user.getName()}" />
-                     <td th:switch="${user.getGender()}">
+                  <tr th:each="student: ${students}">
+                    <th scope="row" th:text="${student.getStudentId()}" />
+                     <td th:text="${student.getName()}" />
+                     <td th:switch="${student.getGender()}">
                         <span th:case="M" th:text="Male" class="text-info" />
                         <span th:case="F" th:text="Female" class="text-danger" />
                      </td>
-                     <td th:text="${user.getAddress()}" />
-                     <td th:text="${user.getType().toString()}" />
+                     <td th:text="${student.getAddress()}" />
                      <td>
-                        <a th:href="@{'user/'+${user.getUserId()}+'/edit'}">
-                           <i class="fas fa-user-edit"></i>
+                        <a th:href="@{'student/'+${student.getStudentId()}+'/edit'}">
+                           <i class="fas fa-student-edit"></i>
                         </a>
                      </td>
                   </tr>
