Fee, Salary, Expense

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -57,6 +57,13 @@
                             >
                                 Open
                             </a>
+                            <a class="btn btn-success manage_btn" 
+                                sec:authorize="hasAuthority('STUDENT')"
+                                th:if="${#request.userPrincipal.name} == ${course.getTeacher().getUserName()}"
+                                th:href="@{'/course-page/'+${course.getCourseId()}}"
+                            >
+                                Open
+                            </a>
                         </div>
                     </div>
                 </div>
